Prevent footer from appearing above header on mobile

--- a/tbx/core/static/torchbox/css/components/_footer.scss
+++ b/tbx/core/static/torchbox/css/components/_footer.scss
@@ -201,7 +201,6 @@ footer {
     display: table;
     text-align: center;
     position: relative;
-    z-index: 9;
     width: 100%;
     background: #212527;
     margin-top: 40px;
